Fix reference links spacing

--- a/frontend/src/pages/panel/PageEditor.scss
+++ b/frontend/src/pages/panel/PageEditor.scss
@@ -37,5 +37,10 @@
       display: flex;
       gap: var(--spacing);
     }
+
+    &References {
+      display: flex;
+      gap: var(--spacing);
+    }
   }
 }
